--- a/index.html
+++ b/index.html
@@ -41,9 +41,8 @@
         <img src="assets/img/profile_image.jpeg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Kanaiym Abdigaparova</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="#" class="handshake"><i class="bx bxl-handshake"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
