--- a/inner-page.html
+++ b/inner-page.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/kanaiym_main1.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/kanaiym_main1-removebg-preview.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Kanaiym Abdigaparova</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="handshake"><i class="bx bxl-handshake"></i></a>
