adjustments in background color

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 class="name1">Kanaiym Abdigaparova</h1>
-      <p class="name2">I'm <span class="typed" data-typed-items="Computer Scientist, Developer, Blogger, Baker, Business lady"></span></p>
+      <p class="name2">I'm <span class="typed" data-typed-items="Computer Scientist, Developer, Blogger, Baker, Future Business lady"></span></p>
     </div>
   </section><!-- End Hero -->
 
