--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
       <div class="profile">
         <img src="assets/img/profile_image.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Kanaiym Abdigaparova</a></h1>
+        <h1 class="text-light"><a href="index.html">Kanaiym <p></p>Abdigaparova</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="handshake"><i class="bx bxl-handshake"></i></a>
+          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -64,7 +64,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1 class="name1">Kanaiym Abdigaparova</h1>
-      <p class="name2">I'm <span class="typed" data-typed-items="Computer Scientist, Developer, Blogger, Baker, Future Business lady"></span></p>
+      <p class="name2">I'm <span class="typed" data-typed-items="Computer Scientist, Web Developer, Blogger, Baker, Future Business lady"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -76,7 +76,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am a motivated and hardworking person who graduated from school successfully both academically and socially.
+            My life experiences inspired me
+            to help my community, especially the kids. I am interested in the development of technology and business. I am sure that I can make positive changes in people's life in over the world.
+            </p>
         </div>
 
         <div class="row">
@@ -84,7 +87,7 @@
             <img src="assets/img/profile_image.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
+            <h3>Computer Science &amp; Business Intellegence and Data Analytycs</h3>
             <p class="fst-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
