--- a/index.html
+++ b/index.html
@@ -206,10 +206,13 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Gymnasium high school after N.Kushmatov</h4>
+              <h5>2017 - 2020</h5>
+              <ul>
+                <li><strong>Minister of Education</strong> <p></p>I organized seminars,trainings,academic competitions and invited interesting people.I conducted Brain Ring among students.      </li>
+                <li><strong>Leader of school debate club</strong> <p></p>I founded debate club in our school with the support of National Endowment for Democracy and Peace Initiatives,mentor younger debate students, organize mock debates,host debate tournament within the city</li>
+                <li><strong>Co-founder of English talking club "Happy English"</strong></li>
+              </ul>
             </div>
             <h3 class="resume-title">Education</h3>
             <div class="resume-item pb-0">
@@ -224,25 +227,31 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Sodexo, Inc. And Affiliated Companies Barista at Starbucks	</h4>
+              <h5>Winter 2022- Present </h5>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Produced a supply of products catered to customer needs and oversaw the management of the store during shifts</li>
+                <li>Worked in a heavily team-oriented and quick-paced environment using problem solving and teamwork skills</li>
+                <li>Gained leadership experience in management and group communications</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>“Ibrahim Travel” International Travel Agency Manager-Accountant</h4>
+              <h5>Fall 2021- Winter 2022 </h5>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Managed the administration of the vacation packages, and flight tickets, served ~500 customers in 2 months  </li>
+                <li>Created a database of the customers and assisted in arranging finances of the company using Excel</li>
+                <li>Gained financial and networking experience to meet goals while working with multiple parties of interest</li>
+                <li>Gained the skills to navigate difficult and complex situations between employees and customers
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Hypermarket “Frunze” Teller-operationist</h4>
+              <h5>Fall 2021 </h5>
+              <ul>
+                <li>Performed financial transactions and worked with computer systems with a database of 47 hypermarkets</li>
+                <li>Gained experience in the retailing business while completing quality trainings and financial management skills </li>
               </ul>
             </div>
           </div>
