Added my CS142 project

--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
                 <li><strong>Co-founder of English talking club "Happy English"</strong></li>
               </ul>
             </div>
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Leadership Experience </h3>
             <div class="resume-item pb-0">
-              <h4>Clarkson University (Potsdam, NY) </h4>
+              <h4>Web Viewer project in CS 142(Introduction to Computer Science II) Leader</h4>
+              <h5>Fall 2022</h5>
               <ul>
-                <li>Major (Bachelor of Science in Computer Science)</li>
-                <li>Major (Bachelor of Business in Business Studies)</li>
+                <li>Led the team by organizing meetings, creating solutions to requirements of the project and implementing new techniques to approach the problem which reads the file, goes to the file linked by numbers and goes back to the previous page                </li>
                 <li><strong>GPA 3.045</strong></li>
               </ul>
             </div>
@@ -265,17 +265,17 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>My projects</h2>
+          <p>In every project I put all my efforts to create and practice everything that I learnt from my classes.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">HTML</li>
+              <li data-filter=".filter-card">CSS</li>
+              <li data-filter=".filter-web">JavaScript</li>
             </ul>
           </div>
         </div>
