--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://kanaiym21.github.io/Final_project/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
