Added UNICEF mentorship experience

--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">UNICEF Kyrgyzstan Regional Mentor	</a></h4>
+            <p class="description">Transliterated school videos for children with disabilities during COVID-19 by collaborating with other mentors and got an appreciation letter from the Ministry of Education and Sciences of Kyrgyzstan and UNICEF</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
